# ingreedy-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
src/: grammar.pest  lib.rs  main.rs
